# fast_mass_spring

./: .gitignore  CMakeLists.txt  README.md  REAME.md
fast_mass_spring/config/: config.txt
fast_mass_spring/source/: anttweakbar_wrapper.cpp  constraint.cpp  constraint.h  main.cpp  primitive.cpp  primitive.h  scene.cpp  scene.h  simulation.cpp  simulation.h
